feat(server): migrate from tables to appsheet adapter

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         --scalar-color-green: #a4b55b;
         --scalar-color-red: #e8612b;
         --scalar-color-yellow: #f8c666;
-        --scalar-color-blue: #ff8e51;
+        --scalar-color-blue: #c2a6fb;
         --scalar-color-orange: #c2a6fb;
         --scalar-color-purple: #9ebafd;
 
