feat(docs): update og and public assets

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,29 @@
 <html>
 <head>
   <title>Phosphor Icons API Documentation</title>
+  <metda name="description" content="A comprehensive guide to the Phosphor Icons API, including usage examples, endpoints, and more.">
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&amp;display=swap" rel="stylesheet">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://api.phosphoricons.com/docs">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Phosphor Icons API Documentation">
+  <meta property="og:description" content="A comprehensive guide to the Phosphor Icons API, including usage examples, endpoints, and more.">
+  <meta property="og:image" content="https://api.phosphoricons.com/og.png">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="api.phosphoricons.com">
+  <meta property="twitter:url" content="https://api.phosphoricons.com/docs">
+  <meta name="twitter:title" content="Phosphor Icons API Documentation">
+  <meta name="twitter:description" content="A comprehensive guide to the Phosphor Icons API, including usage examples, endpoints, and more.">
+  <meta name="twitter:image" content="https://api.phosphoricons.com/og.png">
+
   <style>
     :root {
       --scalar-font: Manrope, sans-serif;
@@ -27,9 +44,9 @@
         --scalar-color-green: #a4b55b;
         --scalar-color-red: #e8612b;
         --scalar-color-yellow: #f8c666;
-        --scalar-color-blue: #c2a6fb;
-        --scalar-color-orange: #c2a6fb;
-        --scalar-color-purple: #9ebafd;
+        --scalar-color-blue: #925bff;
+        --scalar-color-orange: #ff8e51;
+        --scalar-color-purple: #5369d2;
 
       }
       .light-mode .sidebar {
@@ -49,7 +66,7 @@
         --scalar-color-1: #f7f5f1;
         --scalar-color-2: #eeeae3;
         --scalar-color-3: #c9c5bf;
-        --scalar-color-accent: #c4e456;
+        --scalar-color-accent: #D6971E;
         --scalar-background-1: #343330;
         --scalar-background-2:  #282722;
         --scalar-background-3: #3e3d3a;
